# JulianneChess

./: .gitnore  Ai.cpp  Bitboard.cpp  Bitboard.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Gameboard.cpp  Gameboard.hpp  Julianne  Pieces.hpp  README.md  build.sh  err.txt  gdbshortcuts.txt  main.cpp  notes.txt  out.txt
Pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  NonPieces.cpp  NonPieces.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  PieceMoveTables.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
moveTables/: bishopTable.txt  downLeftTable.txt  downRightTable.txt  downStrTable.txt  kingTable.txt  knightTable.txt  leftStrTable.txt  queenTable.txt  rightStrTable.txt  rookTable.txt  upLeftTable.txt  upRightTable.txt  upStrTable.txt
